# daly-bms-exporter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  config.example.yaml  deny.toml
.claude/rules/: decoding.md
.github/workflows/: checks.yml  ci.yml  release.yml
doc/: daly-bms-protocol.md
grafana/dashboards/: daly-bms-bank.json  daly-bms.json
grafana/provisioning/: daly-bms.yaml
packaging/: daly-bms-exporter.service
scripts/: cross-aarch64.Dockerfile  deploy.sh
src/: config.rs  decode.rs  error.rs  lib.rs  main.rs  metrics.rs  modbus.rs  payload.rs  server.rs
tests/: handler.rs
