[package]
authors = ["Evgenii Lepikhin <johnlepikhin@gmail.com>"]
edition = "2024"
name = "daly-bms-exporter"
version = "0.1.3"
description = "Prometheus exporter for Daly BMS telemetry (Hlktech WiFi module)"
license = "MIT"

[profile.release]
# Release compile-time optimizations for minimum binary size
# https://github.com/johnthagen/min-sized-rust
lto = true
strip = true
opt-level = "z"
codegen-units = 1

# Faster-building deploy profile used for aarch64 cross-compilation: trades a
# little binary size for much shorter build times (thin LTO + parallel codegen
# instead of fat LTO + a single codegen unit). Runtime behavior is unchanged.
[profile.deploy]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16

[profile.fastdev]
inherits = "dev"
opt-level = 0
debug = false

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["rt", "macros", "signal", "net"] }
tower-http = { version = "0.6", features = ["timeout", "catch-panic"] }
# default-features off drops the process/procfs+libc collectors we never use.
prometheus = { version = "0.13", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Maintained drop-in fork of the archived serde_yaml (config is YAML per spec).
serde_norway = "0.9"
hex = "0.4"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

# Debian package (aarch64). Build with `make deb` — it packages the
# cross-compiled deploy binary; the asset path below is the deploy artifact.
[package.metadata.deb]
maintainer = "Evgenii Lepikhin <johnlepikhin@gmail.com>"
copyright = "2026, Evgenii Lepikhin"
section = "net"
priority = "optional"
# Directory holding the systemd unit; also triggers auto-generation of the
# postinst/postrm scripts (must be set for systemd-units to emit them).
maintainer-scripts = "packaging"
# The binary links only glibc (no OpenSSL/SQLite), so libc6 is the sole runtime dep.
depends = "libc6"
extended-description = """
Prometheus exporter for Daly R24TK BMS telemetry delivered over the Hlktech WiFi \
module. Receives raw Modbus frames redirected from the device (see \
/usr/share/doc/daly-bms-exporter/README.md) and exposes decoded metrics."""
assets = [
    [
        "target/aarch64-unknown-linux-gnu/deploy/daly-bms-exporter",
        "usr/bin/",
        "755",
    ],
    [
        "config.example.yaml",
        "etc/daly-bms-exporter/config.example.yaml",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/daly-bms-exporter/README.md",
        "644",
    ],
]

# Install the systemd unit (from the maintainer-scripts dir) and enable it on
# install. `start = false`: the operator must provide /etc/.../config.yaml first.
[package.metadata.deb.systemd-units]
enable = true
start = false
restart-after-upgrade = false

